[gd_scene load_steps=5 format=3 uid="uid://06a5ftby2hhl"]

[ext_resource type="Script" uid="uid://b45mi4xr810qx" path="res://scripts/match.gd" id="1_mv342"]
[ext_resource type="PackedScene" uid="uid://baakrjeehjclq" path="res://scenes/pause_menu.tscn" id="2_6dstc"]
[ext_resource type="PackedScene" uid="uid://cc8cfvmqxjxvv" path="res://scenes/game.tscn" id="3_et4mf"]
[ext_resource type="Script" uid="uid://d32bqko5ns673" path="res://scripts/player_buttons.gd" id="4_4bnf7"]

[node name="Match" type="Node2D"]
script = ExtResource("1_mv342")

[node name="PauseMenuCanvas" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="PauseMenuCanvas" instance=ExtResource("2_6dstc")]
process_mode = 3
offset_top = 50.0
offset_bottom = 50.0

[node name="LeftPlayer" parent="." instance=ExtResource("3_et4mf")]

[node name="RightPlayer" parent="." instance=ExtResource("3_et4mf")]
position = Vector2(1170, 0)
is_ai = true

[node name="Message" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ChatInput" type="LineEdit" parent="Message"]
layout_mode = 0
offset_left = 752.0
offset_top = 685.0
offset_right = 1102.0
offset_bottom = 735.0
theme_override_font_sizes/font_size = 30
placeholder_text = "message"

[node name="MessageLabel" type="Label" parent="Message"]
layout_mode = 0
offset_left = 750.0
offset_right = 1170.0
offset_bottom = 137.0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 100
text = "Message"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MessageBox" type="TextEdit" parent="Message"]
layout_mode = 0
offset_left = 750.0
offset_top = 150.0
offset_right = 1170.0
offset_bottom = 675.0
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "
"
wrap_mode = 1

[node name="SendButton" type="Button" parent="Message"]
layout_mode = 0
offset_left = 1105.0
offset_top = 685.0
offset_right = 1170.0
offset_bottom = 735.0
theme_override_font_sizes/font_size = 20
text = "Send"

[node name="PlayerButtons" type="CanvasLayer" parent="."]
script = ExtResource("4_4bnf7")

[node name="Upgrade" type="Button" parent="PlayerButtons"]
custom_minimum_size = Vector2(10, -50)
offset_left = 750.0
offset_top = 840.0
offset_right = 1170.0
offset_bottom = 900.0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "cost $30 to upgrade"

[node name="SkillSlow" type="Button" parent="PlayerButtons"]
offset_left = 750.0
offset_top = 920.0
offset_right = 1170.0
offset_bottom = 980.0
theme_override_font_sizes/font_size = 36
text = "slow down enemy"

[node name="AoeDamage" type="Button" parent="PlayerButtons"]
offset_left = 750.0
offset_top = 1000.0
offset_right = 1170.0
offset_bottom = 1060.0
theme_override_font_sizes/font_size = 36
text = "AOE damages"

[connection signal="text_submitted" from="Message/ChatInput" to="." method="_on_chat_input_text_submitted"]
[connection signal="pressed" from="Message/SendButton" to="." method="_on_send_button_pressed"]
[connection signal="pressed" from="PlayerButtons/Upgrade" to="PlayerButtons" method="_on_upgrade_pressed"]
[connection signal="pressed" from="PlayerButtons/SkillSlow" to="PlayerButtons" method="_on_skill_slow_pressed"]
[connection signal="pressed" from="PlayerButtons/AoeDamage" to="PlayerButtons" method="_on_aoe_damage_pressed"]
